--- a/CPP/C-C++01_语言基础.md
+++ b/CPP/C-C++01_语言基础.md
@@ -1665,3 +1665,225 @@
 + 使用元编程技术的主要有两个目的：
   - 提高类型安全。我们可以计算一个数据结构或算法所需要的确切类型，从而不必直接操作低层数据结构
   - 提高运行时性能。我们可以在编译时进行计算并选择在运行时要调用的函数。这样，我们就不必在运行时进行这些计算。（例如，我们可以将很多多态行为解析为直接函数调用）。特别时，通过利用类型系统，可以显著提高内联的机会。而且，通过使用紧凑的数据结构（可能是生成的数据结构），我们能够更好地利用内存，即减少内存占用又提高运行速度。
+
+## C/C++判断变量的类型
+
++ C++判断变量类型：利用`typeid()`来判断变量类型
+  + `#include <typeinfo>  typeid(var).name()`
+  + `type_info`的成员函数`name`返回类型的`C-style`字符串，但这个返回的类型名与程序中使用的相应类型名不一定一致，其返回值的实现由编译器决定，标准只要求每个类型返回的字符串是唯一的
+  + 和`sizeof`操作符类似，`typeid`的操作对象既可以是数据类型，也可以是表达式
+  + 不像`Java`、`C#`等动态语言，`C++`运行时能获取到的类型信息非常有限，标准也定义的很模糊，如同“鸡肋”一般。在实际工作中，我们一般只使用`type_info`的`“==”`运算符来判断两个类型是否相同
+  + 不能用`typeid`来判断基类指针实际指向的是否是某个派生类
+
++ C语言中，**没有判断变量类型的函数**
++ 可以简单利用`sizeof()`或者`ASCII`码辅助判断
+  + 表达式`sizeof()`可以得到对象或类型的存储字节大小，但是不同操作系统可能存在差异
+
+## C++字符串和数字的拼接
+
++ `std::to_string()`
+  + 通过`std::to_string()`可以将数字类型转换成`std::string`类型，从而可以直接使用`+`完成字符串的拼接
+  + 需要注意的是，`std::string`是C++11才有的方法，在g++编译的时候需要指定`-std=c++11`
+
++ `c_str()`
+  + 如果想要转换为`const char*`的类型，可以使用`c_str()`的方法
+    + `std::string str = "hello 1"; str.c_str();`
+
++ `const_cast`
+  + 如果想要去除const属性，需要使用到`const_cast`
+    ```c
+      std::string str = "hello 1"; str.c_str();
+      const char* const_char_str = str.c_str();
+      std::cout << const_char_str << std::endl;
+
+      char* char_str = const_cast<char*>(const_char_str);
+      std::cout << char_str << std::endl;
+    ```
+
+## C++类的对象调用成员函数
+
++ 点
+  + **变量名**所指向其成员时使用
+
++ 箭头
+  + **地址**所指向其成员时使用
+
++ `A *p; p->play()` : 左边是**结构指针**
++ `A p; p.play()` : 左边是**结构变量**
++ 总结：
+  + 箭头`->` : 左边必须为指针
+  + 点号`.` : 左边必须为实体
+
+## C++中用 `new` 和不用 `new` 创建类对象
+
++ `new`创建类对象，使用完需要使用`delete`删除，和申请内存类似。
++ `new`创建类对象和不使用`new`的区别
+  + `new`创建类对象需要指针接收，一处初始化，多处使用
+  + `new`创建类对象使用完需要使用`delete`销毁
+  + `new`创建对象直接使用堆空间，而局部不用`new`定义类对象则使用栈空间
+  + `new`对象指针用途广泛，比如作为函数返回值，函数参数等
+  + 频繁调度场合并不适合new，就像new申请和释放内存一样
+
++ 普通创建方式，使用完后不需要手动释放，该类析构函数会自动执行；而`new`申请的对象，则只有调用到`delete`时才会执行析构函数，如果程序退出而没有执行`delete`，则会造成内存泄漏。
+
++ 只定义类指针：
+  + 这跟不用new声明对象有很大区别：类指针可以先行定义，但是类指针只是一个通用指针，在`new`之前并未对该类对象分配任何内存空间。
+  + 使用普通方式创建的类对象，在创建之初就已经分配了内存空间，而类指针，如果没有经过对象初始化，则不需要`delete`释放
+
+## 类和动态内存分配
+
++ C++如何增加内存负载？
+  + 假设要创建一个类，其一个成员表示某人的姓。最简单的方法是使用字符数组来保存，但这种方法有一种缺陷。开始也许会使用一个14个字符的数组，然后发现数组太小，更保险的方法是，使用一个40个字符的数组。然而，如果创建包含2000个这种对象的数组，就会由于字符数组只有部分被使用而浪费大量的内存（**在这种情况下，增加了计算机的内存负载**）。
++ **通常，最好是在程序运行时（而不是编译时）确定诸如使用多少内存等问题**。对于在对象中保存姓名来说，通常的C++方法是：在类构造函数中使用new运算符在程序运行时分配所需的内存。
+
++ 在构造函数中使用new来为字符串分配空间，这避免了在类声明中预先定义字符串的长度
++ 静态类成员有一个特点：无论创建了多少对象，程序都只创建一个静态类变量副本。也就是说，类的所有对象共享同一个静态成员。这对于所有类对象都具有相同值的类私有数据是非常方便的。
+
++ 在构造函数中使用`new`来分配内存时，必须在相应的析构函数中使用`delete`来释放内存。如果使用`new[]`（包括中括号）来分配内存，则应使用`delete[]`（包括中括号）来释放内存。
+
+## 内存模型和名称空间
+
++ C++为在内存中存储数据方面提供了多种选择。可以选择数据保留在内存中的时间长度（存储持续性）以及程序的哪一部分可以访问数据（作用域和链接）等。可以使用new来动态地分配内存，而定位new运算符提供了这种技术的一种变种。C++名称空间是另一种控制访问权的方式。
++ 通常，大型程序都由多个源代码文件组成，这些文件可能共享一些数据。这样的程序涉及到程序文件的单独编译。
+
+### 单独编译
+
++ 和C语言一样，C++也允许甚至鼓励程序员将**组件函数**放在独立的文件中。
+
++ 与其将结构声明加入到每一个文件中，不如将其放在头文件中，然后在每一个源代码文件中包含该头文件。这样，要修改结构声明时，只需要在头文件中做一次改动即可。另外，也可以将函数声明放在头文件中。
++ 原来的程序分成三部分：
+  + 头文件，包含结构声明和使用这些结构的函数的声明
+  + 源代码文件，包含与结构有关的函数的代码
+  + 源代码文件，包含调用与结构相关的函数的代码
+
++ 头文件中常包含的内容：
+  + 函数声明
+  + 使用`#define`或`const`定义的符号常量
+  + 结构声明
+  + 类声明
+  + 模板声明
+  + 内联函数
+
+### 存储持续性，作用域和链接性
+
++ C++使用三种（在C++11中是四种）不同的方案来存储数据，这些方案的区别就在于数据保留在内存中的时间
+  + **自动存储持续性** -- 在函数定义中声明的变量（包括函数参数）的存储持续性为自动的。它们在程序开始执行其所属的函数或代码块时被创建，在执行完函数或代码块时，它们使用的内存被释放。C++有两种存储持续性为自动的变量。
+  + **静态存储持续性** -- 在**函数定义外**定义的变量和使用关键字`static`定义的变量的存储持续性都为静态。它们在程序整个运行过程中都存在。C++有三种存储持续性为静态的变量。
+  + **线程存储持续性（C++11）** -- 当前，多核处理器很常见，这些CPU可同时处理多个执行任务。这让程序能够将计算放在可并行处理的不同线程中。如果变量是使用关键字`thread_local`声明的，则其声明周期与所属的线程一样长。（并行编程）
+  + **动态存储持续性** -- 用new运算符分配的内存将一直存在，直到使用delete运算符将其释放或程序结束位置。这种内存的存储持续性为动态，有时被称为自由存储(free store)或堆(heap)
+
++ 作用域(scope)描述了名称在文件（翻译单元）的多大范围内可见。
++ 链接性(linkage)描述了名称如何在不同单元间共享。
+  + 链接性为外部的名称可在文件间共享，链接性为内部的名称只能由一个文件中的函数共享
+  + 自动变量的名称没有链接性，因为它们不能共享
+
+## 类 -- 成员名和参数名
+
++ 构造函数的参数，表示的不是类成员，而是赋给类成员的值。因此，参数名不能与类成员的名称相同
++ 为了避免这种混乱
+  + 一种常见的做法是 -- **在数据成员名中使用`m_`前缀**
+  + 另一种常见的做法是 -- **在数据成员名中使用`_`后缀**
+
+## typedef
+
++ `typedef`声明,为现有类型创建一个新的名字。比如常常使用`typedef`来编写更美观和可读的代码。
++ 所谓美观，是指`typedef`能够隐藏笨拙的语法构造以及平台相关的数据类型，从而增强可移植性以及未来的可维护性。
+
++ 在编程中使用`typedef`目的一般有两个，一个是给变量一个容易记且意义明确的新名字，另一个是简化一些比较复杂的类型声明。
+
++ `typedef`并不是创建新的类型，它仅仅为现有类型添加一个同义字
+
++ `typedef`的最简单使用
+  + `typedef int size;`
+  + `typedef unsigned int u_int;`
+
++ **typedef和数组，指针**
+  + 可以不用像下面这样重复定义有81个字符元素的数组：
+    + `char line[81];`
+    + `char text[81];`
+  + 定义一个`typedef`，每当要用到相同类型和大小的数组时，可以：
+    + `typedef char Line[81];`
+    + `Line text, secondline;`
+  + 同样，可以像下面这样隐藏指针语法：
+    + `typedef char* pstr;`
+    + `pstr str = "abc";`
+    + `int mystrcmp(pstr, pstr);`
+
++ **typedef和函数**
+  + 函数指针一般用于回调，例如信号处理。回调是比较常用的技术，而回调就要涉及函数指针。
+  + 当程序有以下函数：
+    + `void printHello(int i);`
+  + 然后需要定义一个函数指针，指向`printHello`,并且调用这个方法，代码如下：
+    + `void (*pFunc)(int);`
+    + `pFunc = &printHello;`
+    + `(*pFunc)(110);`
+  + 其中，`void (*pFunc)(int)`是声明一个函数指针，指向返回值是`void`，调用参数是`(int)`的函数，变量名是`pFunc`就是函数指针。
+  + 这种声明一个函数指针是比较复杂的，尤其是要在多处地方声明同一个类型的函数指针变量，代码更加复杂
+  + 简化的做法
+    + `typedef void (*PrintHelloHandle)(int);`
+  + 使用代码如下：
+    + `PrintHelloHandle pFunc;`
+    + `pFunc = &printHello;`
+    + `(*pFunc)(110);`
+  + 以后其他地方的程序需要声明类似的函数指针，只需要使用：`PrintHelloHandle pFuncOther;`
+
+
+## 中国大学mooc 北京邮电大学 C++语言程序设计
+
+### 概述
+
++ C++ 语言的特点
+  + 使用面向对象方法，易于代码重用
+  + 适用于大型软件工程项目，易于管理
+  + 代码可维护性好
+
++ 面向过程的程序基本结构：
+  + 顺序
+  + 分支
+  + 循环
+
++ 面向过程的程序设计主要思想：
+  + **自顶向下，逐步求精**
+  + 模块化
+    + 将一个大的系统按照子结构之间的疏密程序分解为较小的部分，每部分称为模块
+    + 分解的原则是：模块之间相对独立，联系较少
+    + **提供给模块外部可见的只是抽象数据及其上的抽象操作，隐藏了实现细节**
+    + 整个程序由多模块组成，模块一般以函数为单位
+
++ 面向对象的程序设计将数据和处理数据的函数当成一个整体：类（类的实例称为对象）
+  + 封装：由对象的概念支持。只需知道外部接口，不需知道内部实现，就可以使用的特性
+  + 继承：由类的概念支持。利用已有的成果进行扩展，充分体现了代码重用
+  + 多态：运行时特性
+  + 确定每个对象和类的简述，例如具体的属性和方法等。
+
++ 面向对象的程序设计的步骤：
+  + 找出问题中的对象和类
+  + 找出这些对象和类之间的关系，确定对象之间的消息通信方式，类之间的继承和组合等关系
+  + 编写程序实现这些对象和类
+
++ 关键字 -- 是**C++**预先定义好的标识符，在程序中具有特殊作用
++ 标识符 -- 是**程序员声明**的单词，它命名程序正文中的一些实体，例如函数名，变量名，类名，对象名等。
++ 分隔符 -- 不表示实际的操作，仅仅用于构造程序
+  + C++分隔符：`()` `{}` `,` `;` `:`
++ 空白  -- 是指制表符，空格，空行，用于分隔单词，在C++语句中经常出现空白，通常都忽略不计
+
++ C++的数据类型决定了
+  + 数据表示形式
+  + 数据的存储空间
+  + 对数据可以进行哪些运算以及运算规则
++ C++的数据类型分为：基本数据类型和自定义数据类型
+
++ 表达式 -- 操作数与运算符（操作符）序列，表达式的值：运算结果
++ 语句   -- 由表达式和结尾的`;`组成一个C++语句
++ 语句块 -- 由`{}`括起来的语句序列，又称为复合语句
++ 运算符 
+  + C++提供了丰富的运算符
+  + 运算符的含义：取决于操作数的类型，当操作数为基本数据类型时，C++定义了运算符的运算规则；对于自定义数据类型，C++支持运算符重载
+
++ 语言的输入输出
+  + 标准输入设备：一般指的是键盘，用于向程序输入数据
+  + 标准输出设备：一般指显示器，用于显示程序的执行结果
+  + C语言没有输入输出语句，而是**使用库函数实现输入输出**，基本输出库函数：putchar, printf 基本输入库函数：getchar, scanf
+  + C++没有输入输出语句，而是使用`iostream`类库实现输入输出
+    + 使用`iostream`库中标准输入流对象`cin`， 实现从键盘读取数据
+    + 使用`iostream`库中标准输出流对象`cout`, 将数据输出到屏幕上
