--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,66 @@
 ## C/C++ 常用编程技巧
 
+### 递归创建目录
+
+在C++中，可以使用递归函数来判断路径是否存在并创建目录。以下是一个示例代码，演示了如何递归判断路径并创建目录：
+
+```cpp
+#include <iostream>
+#include <sys/stat.h>
+
+bool createDirectory(const std::string& path) {
+    // 检查路径是否存在
+    struct stat info;
+    if (stat(path.c_str(), &info) != 0) {
+        // 路径不存在，创建目录
+        if (mkdir(path.c_str(), S_IRWXU | S_IRWXG | S_IROTH | S_IXOTH) == 0) {
+            std::cout << "Created directory: " << path << std::endl;
+            return true;
+        } else {
+            std::cerr << "Failed to create directory: " << path << std::endl;
+            return false;
+        }
+    } else if (info.st_mode & S_IFDIR) {
+        // 路径已存在且为目录
+        std::cout << "Directory already exists: " << path << std::endl;
+        return true;
+    } else {
+        // 路径已存在但不是目录
+        std::cerr << "Path already exists but not a directory: " << path << std::endl;
+        return false;
+    }
+}
+
+bool createDirectoriesRecursive(const std::string& path) {
+    size_t pos = 0;
+    std::string subPath;
+    
+    while ((pos = path.find_first_of("/\\", pos + 1)) != std::string::npos) {
+        subPath = path.substr(0, pos);
+        if (!createDirectory(subPath)) {
+            return false;
+        }
+    }
+    
+    return createDirectory(path);
+}
+
+int main() {
+    std::string path = "/path/to/my/directory";
+    if (createDirectoriesRecursive(path)) {
+        std::cout << "All directories created successfully!" << std::endl;
+    } else {
+        std::cerr << "Failed to create directories." << std::endl;
+    }
+    
+    return 0;
+}
+```
+
+上述代码中的`createDirectory`函数用于判断单个路径是否存在并创建目录。`createDirectoriesRecursive`函数使用递归方式，逐级判断并创建目录，如果某一级目录已存在，则跳过创建。在`main`函数中，我们可以调用`createDirectoriesRecursive`函数来创建目录。
+
+请注意，代码中使用了`sys/stat.h`头文件和相关的系统调用来判断路径是否存在和创建目录。此外，还使用了一些文件权限标志（`S_IRWXU | S_IRWXG | S_IROTH | S_IXOTH`），以确保创建的目录具有适当的权限。
+
 ### 异常捕获
 
 在C++中，您可以使用多个`catch`块来捕获不同类型的异常，并采取相应的处理措施。每个`catch`块可以捕获一个特定类型的异常，并执行相应的代码块。
