主要增加了C++相关笔记

--- a/CPP/C-C++03_常用函数.md
+++ b/CPP/C-C++03_常用函数.md
@@ -1,3 +1,730 @@
+## tcflush
+
++ 简介：
+  + tcflush()函数用于刷新串口输入输出缓冲区。它是与串口相关的函数，可用于清空或刷新串口的数据缓冲区
+
++ 原型：
+```c
+int tcflush(int fd, int queue_selector);
+```
+
++ 参数：
+  + fd：文件描述符，表示要刷新的串口
+  + queue_selector：刷新队列的选择器，可以是以下值之一
+    + TCIFLUSH：刷新输入队列，丢弃输入缓冲区中的数据
+    + TCOFLUSH：刷新输出队列，丢弃输出缓冲区中的数据
+    + TCIOFLUSH：刷新输入和输出队列，丢弃输入和输出缓冲区中的数据
+
++ 返回值：
+  + 如果刷新成功，返回值为0
+  + 如果刷新失败，返回值为-1，并设置errno变量以指示错误类型
+
++ 详解：
+  + 使用tcflush()函数可以清空串口的输入和输出缓冲区，以便开始或终止数据传输之前进行必要的清理
+
++ 示例：
+```c
+#include <termios.h>
+#include <stdio.h>
+
+int main() {
+    int serial_fd; // 串口文件描述符
+
+    // 打开串口并设置相关参数...
+
+    // 清空输入缓冲区
+    if (tcflush(serial_fd, TCIFLUSH) == -1) {
+        perror("Failed to flush input queue");
+        return 1;
+    }
+
+    // 清空输出缓冲区
+    if (tcflush(serial_fd, TCOFLUSH) == -1) {
+        perror("Failed to flush output queue");
+        return 1;
+    }
+
+    printf("Serial port input and output queues flushed\n");
+
+    // 关闭串口...
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们首先打开串口并设置相关参数（未在示例中展示）。然后，我们使用tcflush()函数两次调用来分别清空输入和输出缓冲区。最后，我们关闭串口（未在示例中展示）
+  + 请注意，上述示例仅演示了刷新串口缓冲区的情况。在实际应用中，你可能还需要进行其他串口操作，如读取或写入数据等。同时，还要注意进行错误处理，以检查函数调用是否成功
+
+## cfsetospeed
+
++ 简介：
+  + cfsetospeed() 函数用于设置串口设备的输出波特率。它是与串口相关的函数，用于配置串口的通信参数
+
++ 原型：
+```c
+int cfsetospeed(struct termios *termios_p, speed_t speed);
+```
+
++ 参数：
+  + termios_p：指向 termios 结构的指针，该结构包含了串口的配置参数
+  + speed：要设置的输出波特率
+
++ 返回值：
+  + 如果设置成功，返回值为 0
+  + 如果设置失败，返回值为 -1，并设置 errno 变量以指示错误类型
+
++ 详解：
+  + 使用 cfsetospeed() 函数时，通常需要先获取当前的串口配置参数，然后修改其中的输出波特率，最后将修改后的参数重新设置给串口
+
++ 示例：
+```c
+#include <termios.h>
+#include <stdio.h>
+
+int main() {
+    struct termios term;
+    
+    // 获取当前的串口配置参数
+    tcgetattr(STDOUT_FILENO, &term);
+    
+    // 设置输出波特率为 9600
+    if (cfsetospeed(&term, B9600) == -1) {
+        perror("Failed to set output baud rate");
+        return 1;
+    }
+    
+    // 将修改后的配置参数重新设置给串口
+    if (tcsetattr(STDOUT_FILENO, TCSANOW, &term) == -1) {
+        perror("Failed to apply serial port settings");
+        return 1;
+    }
+    
+    printf("Output baud rate set to 9600\n");
+    
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们首先通过调用 tcgetattr() 函数获取当前的串口配置参数，并将其存储在 term 结构中。然后，我们使用 cfsetospeed() 函数将输出波特率设置为 9600。最后，我们调用 tcsetattr() 函数将修改后的配置参数重新应用到串口
+  + 请注意，上述示例仅演示了设置输出波特率的情况。如果你还需要设置输入波特率，可以使用类似的方法调用 cfsetispeed() 函数进行设置。同时，还要注意进行错误处理，以检查函数调用是否成功
+
+## cfsetispeed
+
++ 简介：
+  + cfsetispeed() 函数用于设置串口设备的输入波特率。它是与串口相关的函数，用于配置串口的通信参数
+
++ 原型：
+```c
+int cfsetispeed(struct termios *termios_p, speed_t speed);
+```
+
++ 参数：
+  + termios_p：指向 termios 结构的指针，该结构包含了串口的配置参数
+  + speed：要设置的输入波特率
+
++ 返回值：
+  + 如果设置成功，返回值为 0
+  + 如果设置失败，返回值为 -1，并设置 errno 变量以指示错误类型
+
++ 详解：
+  + 使用 cfsetispeed() 函数时，通常需要先获取当前的串口配置参数，然后修改其中的输入波特率，最后将修改后的参数重新设置给串口
+
++ 示例：
+```c
+#include <termios.h>
+#include <stdio.h>
+
+int main() {
+    struct termios term;
+    
+    // 获取当前的串口配置参数
+    tcgetattr(STDIN_FILENO, &term);
+    
+    // 设置输入波特率为 9600
+    if (cfsetispeed(&term, B9600) == -1) {
+        perror("Failed to set input baud rate");
+        return 1;
+    }
+    
+    // 将修改后的配置参数重新设置给串口
+    if (tcsetattr(STDIN_FILENO, TCSANOW, &term) == -1) {
+        perror("Failed to apply serial port settings");
+        return 1;
+    }
+    
+    printf("Input baud rate set to 9600\n");
+    
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们首先通过调用 tcgetattr() 函数获取当前的串口配置参数，并将其存储在 term 结构中。然后，我们使用 cfsetispeed() 函数将输入波特率设置为 9600。最后，我们调用 tcsetattr() 函数将修改后的配置参数重新应用到串口
+  + 请注意，上述示例仅演示了设置输入波特率的情况。如果你还需要设置输出波特率，可以使用类似的方法调用 cfsetospeed() 函数进行设置。同时，还要注意进行错误处理，以检查函数调用是否成功
+
+## tcgetattr
+
++ 简介：
+  + tcgetattr() 是一个 C 函数，用于获取终端设备的属性。它用于读取终端设备的当前设置，并将这些设置存储在一个 termios 结构体中
+
++ 原型：
+```c
+int tcgetattr(int fd, struct termios *termios_p);
+```
+
++ 参数：
+  + fd：要获取属性的终端设备文件描述符。
+  + termios_p：指向 termios 结构体的指针，用于存储终端设备的属性
+
++ 返回值：
+  + tcgetattr() 函数会返回一个整数值，表示函数执行的结果。如果函数执行成功，则返回 0；否则，返回 -1，并设置相应的错误码
+
++ 详解
+  + 使用 tcgetattr() 函数可以获取终端设备的属性，如输入输出模式、字符大小、超时设置等。可以通过修改 termios 结构体的成员来更改终端设备的属性，然后使用 tcsetattr() 函数将修改后的属性应用到终端设备上
+
++ 示例：
+```c
+#include <stdio.h>
+#include <termios.h>
+#include <unistd.h>
+
+int main() {
+    int fd = STDIN_FILENO; // 标准输入设备文件描述符
+
+    struct termios term;
+    if (tcgetattr(fd, &term) == -1) {
+        perror("tcgetattr");
+        return 1;
+    }
+
+    // 打印终端设备的属性
+    printf("Input flags: %x\n", term.c_iflag);
+    printf("Output flags: %x\n", term.c_oflag);
+    printf("Control flags: %x\n", term.c_cflag);
+    printf("Local flags: %x\n", term.c_lflag);
+
+    return 0;
+}
+```
+
++ 注：
+  + 这个示例程序获取标准输入设备的属性，并打印各个属性的值。
+
+## ioctl 
+
++ 简介：
+  + ioctl() 是一个系统调用函数，用于控制设备的操作，它在不同的设备和操作系统上有不同的功能和用法。在 C 语言中，可以使用 ioctl() 函数来发送命令给设备驱动程序，并执行特定的操作
+
++ 原型：
+```c
+#include <sys/ioctl.h>
+
+int ioctl(int fd, unsigned long request, ...);
+```
+
++ 参数：
+  + fd：文件描述符，用于指定要进行控制的设备
+  + request：控制命令，是一个无符号长整型数值，用于指定具体的操作
+  + ...：可选参数，根据不同的控制命令可能需要提供额外的参数
+
++ 返回值：
+  + ioctl() 函数的返回值通常为 0 表示操作成功，-1 表示操作失败，并通过 errno 变量来获取具体的错误信息
+
++ 详解：
+  + 要使用 ioctl() 函数，需要事先了解设备的控制命令和参数的定义。不同的设备和操作系统可能有不同的命令和参数定义，因此需要参考相关的文档或设备驱动程序的头文件来获取正确的命令和参数定义
+
++ 示例
+```c
+#include <stdio.h>
+#include <fcntl.h>
+#include <termios.h>
+#include <unistd.h>
+#include <sys/ioctl.h>
+
+int main() {
+    int fd = open("/dev/ttyS0", O_RDWR);
+    if (fd == -1) {
+        perror("Failed to open serial port");
+        return 1;
+    }
+
+    struct termios options;
+    if (tcgetattr(fd, &options) == -1) {
+        perror("Failed to get serial port options");
+        close(fd);
+        return 1;
+    }
+
+    cfsetispeed(&options, B9600);
+    cfsetospeed(&options, B9600);
+
+    if (tcsetattr(fd, TCSANOW, &options) == -1) {
+        perror("Failed to set serial port options");
+        close(fd);
+        return 1;
+    }
+
+    close(fd);
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，首先使用 open() 函数打开串口设备文件 /dev/ttyS0，然后使用 tcgetattr() 函数获取当前的串口设置
+  + 接下来使用 cfsetispeed() 和 cfsetospeed() 函数将输入和输出波特率设置为 9600。这里使用了波特率常量 B9600，具体的常量定义可以在 <termios.h> 头文件中找到
+  + 最后使用 tcsetattr() 函数将修改后的串口设置应用到设备上，并关闭文件描述符
+  + 这只是一个简单的示例，实际的 ioctl() 使用可能涉及更复杂的控制命令和参数，具体的用法和命令定义需要参考相关文档或设备驱动程序的说明
+
+## ftruncate
+
++ 简介：
+  + ftruncate() 函数是 C/C++ 中的一个文件操作函数，用于调整文件的大小
+
++ 原型：
+```c
+#include <unistd.h>
+
+int ftruncate(int fd, off_t length);
+```
+
++ 参数：
+  + fd：文件描述符，指定要操作的文件。
+  + length：要设置的新文件大小
+
++ 详解：
+  + 函数功能：
+    + 如果文件当前的大小大于指定的 length，则文件将被截断到指定的大小。
+    + 如果文件当前的大小小于指定的 length，则文件将被扩展到指定的大小，并使用空字节填充扩展的部分。
+    + 如果文件当前的大小等于指定的 length，则文件大小保持不变
+  + 返回值
+    + 如果调用成功，返回值为 0。
+    + 如果调用失败，返回值为 -1，并设置相应的错误码，可以通过 errno 全局变量获取具体的错误信息。
+  + 使用 ftruncate() 函数需要先打开文件，获取文件描述符 fd，然后调用该函数即可。请确保在使用该函数时具有足够的权限来修改文件大小
+
++ 示例
+```cpp
+#include <fcntl.h>
+#include <unistd.h>
+#include <iostream>
+
+int main() {
+    const char* filename = "example.txt";
+    int fd = open(filename, O_RDWR | O_CREAT, 0644);
+    if (fd == -1) {
+        std::cerr << "Failed to open file: " << filename << std::endl;
+        return 1;
+    }
+
+    off_t new_size = 1024;  // New file size in bytes
+
+    if (ftruncate(fd, new_size) == -1) {
+        std::cerr << "Failed to truncate file" << std::endl;
+        close(fd);
+        return 1;
+    }
+
+    close(fd);
+
+    std::cout << "File size adjusted successfully" << std::endl;
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述代码打开名为 "example.txt" 的文件，将其大小调整为 1024 字节。如果调用成功，将输出 "File size adjusted successfully"。否则，将输出相应的错误信息
+  + 请注意，使用 ftruncate() 函数时应格外谨慎，确保操作的文件和大小设置是正确的，以免意外丢失数据
+
+## shm_unlink
+
++ 简介：
+  + shm_unlink() 函数用于解除与共享内存对象的链接，并将其标记为待删除状态。具体来说，shm_unlink() 函数的作用是删除共享内存对象的名字，但并不立即释放共享内存资源，只有当所有打开该共享内存对象的文件描述符都关闭时，才会释放共享内存资源
+
++ 原型
+```c
+int shm_unlink(const char* name);
+```
+
++ 参数：
+  + 参数 name 是共享内存对象的名字，通过该名字可以标识和访问共享内存对象。
+
++ 详解：
+  + 调用 shm_unlink() 函数后，如果成功解除链接并标记为删除，函数返回 0；如果发生错误，返回 -1，并设置对应的错误码
+
++ 示例：
+```cpp
+#include <fcntl.h>
+#include <sys/mman.h>
+#include <unistd.h>
+
+int main() {
+    const char* shm_name = "/my_shared_memory";
+
+    // 打开共享内存对象
+    int shm_fd = shm_open(shm_name, O_RDWR, 0666);
+    if (shm_fd == -1) {
+        // 错误处理
+        return 1;
+    }
+
+    // 解除链接并标记为删除
+    int result = shm_unlink(shm_name);
+    if (result == -1) {
+        // 错误处理
+        return 1;
+    }
+
+    // 关闭共享内存对象
+    close(shm_fd);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们通过 shm_open() 打开了一个共享内存对象，然后调用 shm_unlink() 解除与该对象的链接并标记为删除。最后，通过 close() 关闭了共享内存对象的文件描述符
+  + 需要注意的是，只有当所有打开共享内存对象的进程都解除链接后，该共享内存对象才会被真正删除。因此，在使用 shm_unlink() 函数时需要确保所有进程都已解除链接，以避免资源泄漏
+
+## shm_open
+
++ 简介：
+  + 在 C++ 中，shm_open() 函数用于创建或打开共享内存对象。它是 POSIX 共享内存机制的一部分，用于在不同进程之间共享内存数据。
+
++ 原型：
+```c
+int shm_open(const char* name, int oflag, mode_t mode);
+```
+
++ 参数：
+  + name：共享内存对象的名称，以字符串形式表示。在创建共享内存对象时，可以给它一个唯一的名称，以便其他进程可以使用相同的名称来访问该对象
+  + oflag：打开标志，用于指定打开共享内存的方式。常用的选项包括 O_CREAT（如果共享内存对象不存在，则创建它）和 O_RDWR（可读写方式打开共享内存）等
+  + mode：权限模式，用于设置共享内存对象的权限。只有在创建新的共享内存对象时才会使用该参数，它类似于 open() 函数中的文件权限参数
+
++ 详解：
+  + shm_open() 函数返回一个整数值，代表共享内存对象的文件描述符。如果打开或创建共享内存对象成功，则返回非负整数值；否则返回 -1，并设置相应的错误码。
+
++ 示例：
+```cpp
+#include <iostream>
+#include <fcntl.h>
+#include <sys/mman.h>
+#include <sys/stat.h>
+#include <unistd.h>
+
+int main() {
+    // 共享内存对象的名称
+    const char* name = "/my_shared_memory";
+    
+    // 创建或打开共享内存对象
+    int fd = shm_open(name, O_CREAT | O_RDWR, S_IRUSR | S_IWUSR);
+    if (fd == -1) {
+        std::cout << "Failed to create/open shared memory" << std::endl;
+        return 1;
+    }
+    
+    // 关闭共享内存对象的文件描述符
+    close(fd);
+    
+    std::cout << "Shared memory created/opened successfully" << std::endl;
+    
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们使用 shm_open() 函数创建或打开了一个名为 "/my_shared_memory" 的共享内存对象。通过指定 O_CREAT 和 O_RDWR 标志，我们创建了一个新的共享内存对象，并以可读写方式打开它。然后，我们关闭了共享内存对象的文件描述符，并输出一条成功的消息
+  + 请注意，shm_open() 函数只是打开或创建共享内存对象，它并没有定义共享内存的大小或分配实际的内存空间。要分配内存空间并映射到共享内存对象，可以使用 mmap() 函数。同时，创建或打开共享内存对象后，应该适当处理错误情况并进行错误检查，以确保操作的成功
+  + 在编译链接时，需要包含头文件`<sys/mman.h>`和链接库`librt.so`
+
+## shmat
+
++ 简介：
+  + shmat()函数用于将共享内存段连接到当前进程的地址空间。
+
++ 原型：
+```c
+#include <sys/types.h>
+#include <sys/shm.h>
+
+void *shmat(int shmid, const void *shmaddr, int shmflg);
+```
+
++ 参数：
+  + shmid：共享内存标识符，即共享内存段的标识符。
+  + shmaddr：指定共享内存段连接到当前进程地址空间的地址。通常设置为NULL，让系统自动选择一个可用的地址
+  + shmflg：标志位，用于指定共享内存段的连接方式和权限。可以使用SHM_RDONLY表示只读方式连接共享内存段，也可以使用0表示可读写方式连接
+
++ 详解：
+  + shmat()函数的返回值是一个void*指针，指向共享内存段在当前进程地址空间的起始地址。连接成功时，返回指向共享内存段的指针；连接失败时，返回-1。
+
++ 示例：
+```c
+#include <stdio.h>
+#include <sys/shm.h>
+
+int main() {
+    int shmid = 1234; // 共享内存标识符
+    
+    // 连接共享内存段
+    void *shm_ptr = shmat(shmid, NULL, 0);
+    if (shm_ptr == (void*)-1) {
+        perror("shmat");
+        return 1;
+    }
+    
+    printf("Shared memory segment attached at address: %p\n", shm_ptr);
+    
+    // 在连接的共享内存段中读写数据
+    int *data = (int*)shm_ptr;
+    *data = 42;
+    printf("Data in shared memory: %d\n", *data);
+    
+    // 断开共享内存段的连接
+    int result = shmdt(shm_ptr);
+    if (result == -1) {
+        perror("shmdt");
+        return 1;
+    }
+    
+    printf("Shared memory segment detached\n");
+    
+    return 0;
+}
+``` 
+
++ 注：
+  + 在这个示例中，我们首先使用shmat()函数将共享内存段连接到当前进程的地址空间。通过将shmaddr参数设置为NULL，让系统自动选择可用的地址进行连接。如果连接成功，返回的shm_ptr指向共享内存段在当前进程地址空间的起始地址
+  + 接下来，我们可以在连接的共享内存段中进行读写操作。在示例中，我们将共享内存段当作一个整数变量来使用，将值42写入共享内存段，并从共享内存段中读取该值
+  + 最后，我们使用shmdt()函数断开共享内存段的连接，将共享内存段从当前进程的地址空间中分离。注意，断开连接并不会删除共享内存段，只是将共享内存段从当前进程中移除。如果其他进程仍然连接到该共享内存段，它们仍然可以访问和修改共享内存数据
+  + 需要注意的是，使用shmat()和shmdt()函数时需要确保当前用户对共享内存段具有足够的权限。另外，要小心处理共享内存的并发访问，使用同步机制来避免竞争条件和数据不一致的问题
+
+## shmctl
+
++ 简介：
+  + shmctl()函数用于控制和操作共享内存段的属性。
+
++ 原型：
+```c
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
+
+int shmctl(int shmid, int cmd, struct shmid_ds *buf);
+```
+
++ 参数：
+  + shmid：共享内存标识符，即共享内存段的标识符。
+  + cmd：控制命令，用于指定对共享内存段的操作，可以是下列值之一：
+    + IPC_STAT：获取共享内存段的状态信息，将共享内存段的信息存储在buf指向的shmid_ds结构体中。
+    + IPC_SET：设置共享内存段的状态信息，将buf指向的shmid_ds结构体中的信息应用于共享内存段。
+    + IPC_RMID：删除共享内存段，释放共享内存资源。
+  + buf：用于存储共享内存段状态信息的结构体指针。
+
++ 详解：
+  + 使用IPC_STAT命令可以获取共享内存段的状态信息，包括共享内存段的大小、创建者的用户ID、最后一次操作的时间等。这些信息被存储在shmid_ds结构体中，通过传递一个指向该结构体的指针作为buf参数来获取这些信息
+  + 使用IPC_SET命令可以修改共享内存段的属性，比如更改共享内存段的权限、所有者等。需要将一个填充了新属性值的shmid_ds结构体指针传递给buf参数
+  + 使用IPC_RMID命令可以删除共享内存段，释放相关的资源。注意，删除共享内存段并不会立即清除共享内存中的数据，只是使得该共享内存段不再可用。实际的共享内存段会在所有连接到它的进程都断开连接后被系统清理
+
++ 示例
+```c
+#include <stdio.h>
+#include <sys/shm.h>
+
+int main() {
+    int shmid = 1234; // 共享内存标识符
+    
+    struct shmid_ds shm_info;
+    
+    // 获取共享内存段的状态信息
+    int result = shmctl(shmid, IPC_STAT, &shm_info);
+    if (result == -1) {
+        perror("shmctl");
+        return 1;
+    }
+    
+    printf("Size of shared memory segment: %lu\n", shm_info.shm_segsz);
+    printf("Owner's user ID: %d\n", shm_info.shm_perm.uid);
+    printf("Last attach time: %ld\n", shm_info.shm_atime);
+    
+    // 修改共享内存段的权限
+    shm_info.shm_perm.mode = 0666; // 设置权限为rw-rw-rw-
+    result = shmctl(shmid, IPC_SET, &shm_info);
+    if (result == -1) {
+        perror("shmctl");
+        return 1;
+    }
+    
+    printf("Shared memory segment permissions updated successfully\n");
+    
+    return 0;
+}
+```
+
++ 注：
+  + 在这个示例中，我们首先使用shmctl()函数和IPC_STAT命令获取共享内存段的状态信息，并将信息存储在shmid_ds结构体（shm_info）中。然后，我们打印出共享内存段的大小、所有者的用户ID以及最后一次附加到共享内存段的时间
+  + 接下来，我们修改共享内存段的权限，将权限设置为0666，即读写权限对所有用户都可用。我们将新的权限信息存储在shm_info结构体中，并使用shmctl()函数和IPC_SET命令应用这些新的属性
+  + 请注意，使用shmctl()函数进行修改操作时，需要确保当前用户对共享内存段具有足够的权限。另外，要小心使用IPC_RMID命令删除共享内存段，因为这将导致所有连接到该共享内存段的进程失去对它的访问权限
+
+## shmdt
+
++ 简介：
+  + shmdt()函数用于将共享内存段从当前进程的地址空间中分离，即将共享内存段与进程的连接断开
+
++ 原型：
+```c
+#include <sys/types.h>
+#include <sys/shm.h>
+
+int shmdt(const void *shmaddr);
+```
+
++ 参数
+  + shmaddr：共享内存段的起始地址，即附加到进程地址空间的地址。
+
++ 详解：
+  + shmdt()函数将共享内存段从当前进程的地址空间中分离，并释放与共享内存段相关的资源。一旦共享内存段被分离，进程将无法再访问共享内存段中的数据。
+  + 使用shmdt()函数时需要注意以下几点：
+    + shmaddr参数应该是之前使用shmat()函数将共享内存段附加到进程地址空间时返回的地址
+    + 成功执行shmdt()函数后，共享内存段与进程的连接被断开，但共享内存段本身并没有被销毁。其他进程仍然可以访问该共享内存段。
+    + 如果多个进程共享同一个共享内存段，在一个进程中调用shmdt()函数分离共享内存段后，其他进程仍然可以继续访问该共享内存段。
+    + 分离共享内存段后，可以使用shmctl()函数删除共享内存段。
+
++ 示例：
+```c
+#include <stdio.h>
+#include <sys/shm.h>
+
+int main() {
+    int shmid = 1234; // 共享内存标识符
+    
+    void *shmaddr = shmat(shmid, NULL, 0);
+    if (shmaddr == (void *)-1) {
+        perror("shmat");
+        return 1;
+    }
+    
+    printf("Shared memory segment attached at address: %p\n", shmaddr);
+    
+    int result = shmdt(shmaddr);
+    if (result == -1) {
+        perror("shmdt");
+        return 1;
+    }
+    
+    printf("Shared memory segment detached successfully\n");
+    
+    return 0;
+}
+```
+
++ 注：
+  + 在这个示例中，我们首先使用shmat()函数将共享内存段附加到进程地址空间，并获取共享内存段的起始地址（shmaddr）。然后，我们使用shmdt()函数分离共享内存段，断开进程与共享内存段的连接。如果分离共享内存段时出现错误，我们使用perror()函数打印相应的错误消息
+  + 请注意，分离共享内存段后，进程将无法再访问共享内存段中的数据
+
+## shmget
+
++ 简介：
+  + shmget()函数是一个系统调用，用于创建或打开一个共享内存段。
+
++ 原型：
+```c
+#include <sys/ipc.h>
+#include <sys/shm.h>
+
+int shmget(key_t key, size_t size, int shmflg);
+```
+
++ 参数
+  + key：共享内存段的键值，通常由ftok()函数生成。
+  + size：共享内存段的大小，以字节为单位
+  + shmflg：共享内存段的访问权限和标志，可以是一个或多个标志的位或运算结果，如IPC_CREAT、IPC_EXCL等。
+
++ 详解
+  + shmget()函数根据给定的键值和大小创建或打开一个共享内存段，并返回一个与共享内存段相关的标识符（shmid）。这个标识符可以用于后续的共享内存操作，如附加、分离、读写等。
+  + 使用shmget()函数时需要注意以下几点：
+    + key参数应该是一个与其他进程共享的键值，通常由ftok()函数生成。不同的key值将对应不同的共享内存段。
+    + size参数指定了共享内存段的大小，即申请的内存空间大小。
+    + shmflg参数用于设置共享内存段的权限和标志。常见的标志有IPC_CREAT表示创建新的共享内存段，IPC_EXCL表示只在共享内存段不存在时创建，0666表示权限设置为可读可写。
+    + 如果成功创建或打开共享内存段，shmget()函数返回一个非负整数的共享内存标识符（shmid），用于后续的共享内存操作。
+    + 如果共享内存段已经存在且没有指定IPC_EXCL标志，则返回已存在的共享内存标识符
+
++ 示例
+```c
+#include <stdio.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
+
+int main() {
+    key_t key = ftok("/path/to/file", 1);
+    if (key == -1) {
+        perror("ftok");
+        return 1;
+    }
+    
+    int size = 1024; // 共享内存段的大小，以字节为单位
+    
+    int shmid = shmget(key, size, IPC_CREAT | 0666);
+    if (shmid == -1) {
+        perror("shmget");
+        return 1;
+    }
+    
+    printf("Shared memory segment created with shmid: %d\n", shmid);
+    
+    return 0;
+}
+```
+
++ 注：
+  + 这个示例中，我们首先使用ftok()函数生成一个键值，然后使用shmget()函数创建一个共享内存段，并获取与该共享内存段相关的标识符（shmid）。如果创建共享内存段时出现错误，我们使用perror()函数打印相应的错误消息。
+  + 请注意，创建共享内存段后，还需要使用其他函数（如shmat()）将共享内存段附加到进程的地址空间中，才能进行读写操作。此处仅演示了创建共享内存段的基本过程
+
+## ftok
+
++ 简介：
+  + `ftok()`函数是C语言中的一个函数，用于生成一个唯一的键值（key）来创建一个共享内存、消息队列或信号量等系统对象。
+
++ 原型：
+```c
+key_t ftok(const char *pathname, int proj_id);
+```
+
++ 参数
+  + pathname：一个存在的文件的路径名，用于生成键值。
+  + proj_id：项目标识符，通常为一个非负整数，用于区分不同的键值。
+
++ 详解
+  + ftok()函数根据pathname和proj_id生成一个唯一的键值，并返回一个key_t类型的值作为结果。这个键值可以用于创建和访问共享内存、消息队列或信号量等系统对象
+  + 使用ftok()函数时需要注意以下几点：
+    + pathname参数必须是一个有效的文件路径，且文件必须存在。如果文件不存在或路径无效，ftok()函数将返回一个错误的键值。
+    + proj_id参数通常是一个非负整数，用于区分不同的键值。不同的proj_id值将生成不同的键值。
+
++ 示例
+```c
+#include <stdio.h>
+#include <sys/types.h>
+#include <sys/ipc.h>
+
+int main() {
+    key_t key = ftok("/path/to/file", 1);
+    
+    if (key == -1) {
+        perror("ftok");
+        return 1;
+    }
+    
+    printf("Generated key: %d\n", key);
+    
+    return 0;
+}
+```
+
++ 注：
+  + 请注意，生成的键值应该在进程之间共享，以便其他进程可以使用相同的键值访问同一个系统对象。通常，可以将生成的键值传递给共享内存、消息队列或信号量等相关函数来创建或访问这些对象
+  + 相同的文件，相同的标识符，生成相同的键值
+
 ## newlocale
 
 + `newlocale`是一个C语言函数，用于创建一个新的区域设置对象。区域设置对象是一个数据结构，包含了与特定地区相关的本地化信息，如日期格式、货币符号、语言偏好等。
