--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,70 @@
 # 概述 -- 理论基础知识
 
+## C++ 文件读取到内存，为什么都是以char数据类型存储
+
+在C++中，文件读取到内存通常使用 `char` 类型存储数据，是因为 `char` 类型是最基本的字节类型，在内存中以字节为单位存储数据。文件可以被视为字节流，而 `char` 类型正好可以表示一个字节的数据。
+
+使用 `char` 类型存储文件数据有以下几个原因：
+
+1. 文件是由字节组成的：文件内容是以字节为单位存储的，而 `char` 类型正好可以表示一个字节的数据，因此使用 `char` 类型存储文件数据最为直观和自然。
+
+2. 字节操作灵活：使用 `char` 类型存储文件数据可以方便地进行字节级的操作和处理，如读取、写入、拷贝、比较等。
+
+3. 兼容性和可移植性：`char` 类型在不同平台和系统中具有相同的字节大小（通常为 1 字节），因此在文件读取和内存操作时具有良好的兼容性和可移植性。
+
+尽管文件可以包含不同的数据类型，例如整数、浮点数、字符串等，但在读取文件到内存时，通常先将文件内容视为字节流，再根据具体的数据格式和解析需求对字节进行解析和转换。这样可以灵活地处理各种不同类型的文件数据。
+
+当需要读取其他数据类型时，可以使用类型转换和解析操作将 `char` 类型的数据转换为目标数据类型。例如，可以使用 `reinterpret_cast` 或 `memcpy` 等操作将 `char` 数组转换为其他类型的数据。
+
+## C++ 内存共享
+
+在C++中，内存共享是一种在多个进程之间共享内存数据的机制。它允许不同的进程访问相同的内存区域，以实现进程间的数据共享和通信。
+
+C++中实现内存共享通常可以使用以下两种机制：
+
+1. 共享内存对象：可以使用操作系统提供的共享内存机制，如`shmget`、`shmat`等函数，或者使用第三方库，如Boost.Interprocess库。共享内存对象允许多个进程将同一块内存映射到它们的地址空间中，并通过该内存进行数据交换。进程可以直接读写共享内存中的数据，而无需复制数据。
+
+2. 内存映射文件：可以通过将文件映射到内存中来实现进程间的内存共享。使用`mmap`函数可以将文件映射到进程的地址空间，并让多个进程共享同一块内存区域。进程可以通过对内存的读写来实现数据共享和通信。
+
+无论使用哪种机制，内存共享需要考虑同步和互斥的问题，以确保数据的一致性和正确性。常见的同步和互斥机制包括使用信号量、互斥锁、读写锁等。
+
+下面是一个使用共享内存对象进行内存共享的简单示例：
+
+```cpp
+#include <iostream>
+#include <cstring>
+#include <sys/ipc.h>
+#include <sys/shm.h>
+
+struct SharedData {
+    int value;
+    char message[256];
+};
+
+int main() {
+    key_t key = ftok("/tmp/memfile", 1);
+    int shmId = shmget(key, sizeof(SharedData), IPC_CREAT | 0666);
+    SharedData* sharedData = static_cast<SharedData*>(shmat(shmId, nullptr, 0));
+    
+    // 写入共享内存数据
+    sharedData->value = 42;
+    std::strcpy(sharedData->message, "Hello, shared memory!");
+    
+    // 从共享内存中读取数据
+    std::cout << "Value: " << sharedData->value << std::endl;
+    std::cout << "Message: " << sharedData->message << std::endl;
+    
+    shmdt(sharedData);
+    shmctl(shmId, IPC_RMID, nullptr);
+    
+    return 0;
+}
+```
+
+上述示例使用了`shmget`函数创建共享内存对象，并使用`shmat`函数将共享内存映射到进程的地址空间中。通过共享内存指针`sharedData`，可以直接读写共享内存中的数据。
+
+需要注意的是，共享内存的创建、附加、分离和销毁都需要使用相应的函数进行操作，并且需要正确地处理错误和同步机制，以确保多个进程之间的数据一致性和安全性。
+
 ## C++项目开发结构
 
 在C++项目开发中，第三方源代码通常会被放置在项目的特定目录中，以便管理和使用。常见的做法是在项目根目录下创建一个名为 "third_party" 或 "external" 的目录，用于存放第三方源代码。
