--- a/CPP/C-C++02_常用函数.md
+++ b/CPP/C-C++02_常用函数.md
@@ -70,7 +70,7 @@
 
 ## write()
 
-+ 简述：将 n 字节的 buf 写入 __fd
+<!-- + 简述：将 n 字节的 buf 写入 __fd
 + 声明：`ssize_t write(int __fd, const void *__buf, size_t __n);`
 + 参数：
   + `__fd`  --  要保存写入数据的文件
@@ -78,7 +78,66 @@
   + `n`     --  数据大小
 + 返回值：
   + 成功  --  返回写入的数字
-  + 失败  --  -1
+  + 失败  --  -1 -->
+
++ 简介：
+  + write()函数用于将数据从文件描述符（通常是文件、管道、套接字等）写入到指定的缓冲区
+
++ 原型：
+```c
+ssize_t write(int fd, const void *buf, size_t count);
+```
+
++ 参数：
+  + fd：文件描述符，表示要写入的文件或设备
+  + buf：指向要写入的数据的缓冲区的指针
+  + count：要写入的字节数
+
++ 返回值：
+  + 如果写入成功，返回值为实际写入的字节数
+  + 如果发生错误，返回值为-1，并设置errno变量以指示错误类型
+
++ 详解：
+  + write()函数会尽可能地写入指定数量的字节到文件描述符中。它不保证一次性写入全部数据，可能会根据底层实现的不同进行分多次写入。因此，在使用write()函数时，需要检查返回值以确保写入了所需的字节数
+
++ 示例：
+```c
+#include <unistd.h>
+#include <fcntl.h>
+#include <string.h>
+#include <stdio.h>
+
+int main() {
+    int fd; // 文件描述符
+    const char *data = "Hello, World!"; // 要写入的数据
+    size_t len = strlen(data); // 数据长度
+
+    // 打开文件（如果不存在则创建）
+    fd = open("output.txt", O_WRONLY | O_CREAT | O_TRUNC, 0644);
+    if (fd == -1) {
+        perror("Failed to open file");
+        return 1;
+    }
+
+    // 写入数据到文件
+    ssize_t bytes_written = write(fd, data, len);
+    if (bytes_written == -1) {
+        perror("Failed to write data to file");
+        return 1;
+    }
+
+    printf("Data written to file: %ld bytes\n", bytes_written);
+
+    // 关闭文件
+    close(fd);
+
+    return 0;
+}
+```
+
++ 注：
+  + 在上述示例中，我们首先使用open()函数打开一个文件，如果文件不存在则创建它。然后，我们使用write()函数将数据写入文件。最后，我们使用close()函数关闭文件
+  + 请注意，上述示例仅演示了将数据写入文件的情况。在实际应用中，你可能需要根据需要调整文件打开模式和权限，并处理错误情况
 
 ## read()
 
@@ -98,7 +157,7 @@
 
 ## mmap()
 
-+ 简述：
+<!-- + 简述：
   + 映射地址从`addr`附近开始并扩展到`len`字节。从`offset`根据`prot`和`flags`写入文件`fd`中描述。
   + 如果`MAP_FIXED`位是在`flags`中设置，映射将准确地位于`addr`；否则系统会选择一个方便的附近地址
 + 声明：`void* mmap(void *addr, size_t len, int prot, int flags, int fd, off_t offset);`
@@ -111,7 +170,79 @@
   + `offset`--  偏移
 + 返回值：
   + 成功  --  实际映射地址
-  + 失败  --  `MAP_FAILED`
+  + 失败  --  `MAP_FAILED` -->
+
++ 简述：
+  + mmap() 函数是 C/C++ 中的一个系统调用，用于将文件映射到进程的虚拟内存空间。
+
++ 原型：
+```c
+#include <sys/mman.h>
+
+void *mmap(void *addr, size_t length, int prot, int flags, int fd, off_t offset);
+```
+
++ 参数：
+  + addr：映射的起始地址。可以传入 NULL，表示由系统自动选择一个合适的地址。
+  + length：映射的长度，以字节为单位。
+  + prot：映射的保护模式，指定对内存区域的访问权限。常用的取值包括 PROT_READ（可读）、PROT_WRITE（可写）和 PROT_EXEC（可执行）
+  + flags：映射的标志位，用于指定映射的属性。常用的取值包括 MAP_SHARED（与其他进程共享）和 MAP_PRIVATE（私有映射）
+  + fd：文件描述符，指定要映射的文件。如果不需要映射文件，可以传入 -1。
+  + offset：文件偏移量，指定从文件的哪个位置开始映射
+
++ 返回值：
+  + 如果映射成功，返回映射区域的起始地址。
+  + 如果映射失败，返回 MAP_FAILED，即 (void*)-1。
+
++ 详解：
+  + 使用 mmap() 函数可以将文件映射到进程的内存空间，从而可以直接通过内存访问文件的内容，而无需进行频繁的文件 I/O 操作。映射的文件内容可以像访问内存一样进行读写操作，对映射区域的修改也会反映到原始文件上
+
++ 示例：
+```cpp
+#include <sys/mman.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+#include <unistd.h>
+#include <iostream>
+
+int main() {
+    const char* filename = "example.txt";
+    int fd = open(filename, O_RDONLY);
+    if (fd == -1) {
+        std::cerr << "Failed to open file: " << filename << std::endl;
+        return 1;
+    }
+
+    struct stat file_stat;
+    if (fstat(fd, &file_stat) == -1) {
+        std::cerr << "Failed to get file size" << std::endl;
+        close(fd);
+        return 1;
+    }
+
+    off_t file_size = file_stat.st_size;
+
+    void* addr = mmap(NULL, file_size, PROT_READ, MAP_PRIVATE, fd, 0);
+    if (addr == MAP_FAILED) {
+        std::cerr << "Failed to map file to memory" << std::endl;
+        close(fd);
+        return 1;
+    }
+
+    // 在 addr 指向的内存区域中可以直接访问文件的内容
+
+    munmap(addr, file_size);
+    close(fd);
+
+    std::cout << "File mapped to memory successfully" << std::endl;
+
+    return 0;
+}
+```
+
++ 注：
+  + 上述代码打开名为 "example.txt" 的文件，获取其大小后，使用 mmap() 函数将文件内容映射到内存中。如果映射成功，将输出 "File mapped to memory successfully"。最后，使用 munmap() 函数解除映射，关闭文件
+  + 请注意，使用 mmap() 函数时应格外谨慎，确保正确地处理内存映射区域，避免出现悬挂指针和访问越界等问题。同时，对映射区域的读写操作可能会影响到原始文件，需要注意数据的同步与持久化
 
 ## dirname()
 
@@ -523,6 +654,40 @@
 + 注意：
   + 当读取 (n-1) 个字符时，或者读取到换行符时，或者到达文件末尾时，它会停止，具体视情况而定
 
++ 简介：
+  + fgets()函数是C标准库中用于从文件中读取一行数据的函数。
+
++ 原型：
+```c
+char *fgets(char *str, int size, FILE *stream);
+```
+
++ 参数：
+  + str：指向字符数组的指针，用于存储读取的数据。
+  + size：指定要读取的最大字符数（包括换行符），即字符数组str的大小
+  + stream：指定要从中读取数据的文件流指针
+
++ 返回值：
+  + 如果成功读取到数据，fgets()会返回指向字符数组str的指针
+  + 如果遇到文件结束或发生读取错误，fgets()会返回NULL
+
++ 详解：
+  + fgets()函数从指定的文件流stream中读取一行数据（包括换行符），并将其存储到字符数组str中。读取的数据包括换行符，且最多读取size - 1个字符。如果一行数据的长度超过了size - 1个字符，则fgets()会截断剩余的字符
+
++ 示例：
+```c
+char buffer[100];
+FILE *file = fopen("example.txt", "r");
+if (file != NULL) {
+    if (fgets(buffer, sizeof(buffer), file) != NULL) {
+        printf("Read line: %s", buffer);
+    }
+    fclose(file);
+}
+```
+
++ 注：
+  + 上述示例中，打开名为"example.txt"的文件并将其用于读取，然后调用fgets()函数从文件中读取一行数据存储到buffer数组中，并通过printf()函数将读取的行打印出来。最后关闭文件
 
 ## rewind()
 
