--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,92 @@
 ## C/C++ 常用编程技巧
 
+### 文件读取到内存，写入到新文件
+
+在 C++11 中，可以使用 `std::ifstream` 类来读取文件内容，并使用 `std::ofstream` 类来写入文件内容。下面是一个示例代码，演示如何将文件读取到内存中，然后保存为新文件：
+
+```cpp
+#include <iostream>
+#include <fstream>
+#include <vector>
+
+// 读取文件内容到内存
+std::vector<char> ReadFileToMemory(const std::string& filename) {
+    std::ifstream file(filename, std::ios::binary);
+    
+    if (!file) {
+        std::cerr << "Failed to open file: " << filename << std::endl;
+        return {};
+    }
+    
+    // 获取文件大小
+    file.seekg(0, std::ios::end);
+    std::streampos fileSize = file.tellg();
+    file.seekg(0, std::ios::beg);
+    
+    // 分配内存缓冲区
+    std::vector<char> buffer(fileSize);
+    
+    // 读取文件内容到缓冲区
+    if (!file.read(buffer.data(), fileSize)) {
+        std::cerr << "Failed to read file: " << filename << std::endl;
+        return {};
+    }
+    
+    return buffer;
+}
+
+// 将内存内容保存为新文件
+bool SaveMemoryToFile(const std::vector<char>& data, const std::string& filename) {
+    std::ofstream file(filename, std::ios::binary);
+    
+    if (!file) {
+        std::cerr << "Failed to open file for writing: " << filename << std::endl;
+        return false;
+    }
+    
+    // 将内存内容写入文件
+    if (!file.write(data.data(), data.size())) {
+        std::cerr << "Failed to write file: " << filename << std::endl;
+        return false;
+    }
+    
+    return true;
+}
+
+int main() {
+    std::string inputFile = "input.txt";
+    std::string outputFile = "output.txt";
+    
+    // 读取文件到内存
+    std::vector<char> fileData = ReadFileToMemory(inputFile);
+    
+    if (fileData.empty()) {
+        std::cerr << "Failed to read file: " << inputFile << std::endl;
+        return 1;
+    }
+    
+    // 将内存内容保存为新文件
+    if (!SaveMemoryToFile(fileData, outputFile)) {
+        std::cerr << "Failed to save file: " << outputFile << std::endl;
+        return 1;
+    }
+    
+    std::cout << "File saved successfully: " << outputFile << std::endl;
+    
+    return 0;
+}
+```
+
+在上述代码中，`ReadFileToMemory` 函数接收一个文件名作为参数，并返回一个 `std::vector<char>`，其中包含了文件的内容。函数使用 `std::ifstream` 打开文件，并根据文件大小分配一个足够大的缓冲区。然后，它将文件内容读取到缓冲区中，并返回缓冲区。
+
+`SaveMemoryToFile` 函数接收一个 `std::vector<char>` 和一个文件名作为参数，并将内存中的数据写入到指定文件中。函数使用 `std::ofstream` 打开文件，并将内存中的数据写入文件。
+
+在 `main` 函数中，首先指定要读取的输入文件名和要保存的输出文件名。然后，调用 `ReadFileToMemory` 函数将
+
+文件读取到内存中，并检查是否成功。最后，调用 `SaveMemoryToFile` 函数将内存中的数据保存为新文件，并检查是否成功。
+
+请根据实际需求修改文件名和路径，并确保有读取和写入文件的权限。
+
 ### 递归创建目录
 
 在C++中，可以使用递归函数来判断路径是否存在并创建目录。以下是一个示例代码，演示了如何递归判断路径并创建目录：
