--- a/CPP/C-C++08_常用类.md
+++ b/CPP/C-C++08_常用类.md
@@ -1,4 +1,48 @@
+## `std::ifstream`
+
+`std::ifstream` 是 C++ 标准库中用于文件输入的类，用于从文件中读取数据。它是基于流的输入操作符 `>>` 实现的，可以通过打开文件并使用 `>>` 运算符将文件中的数据读取到不同类型的变量中。
+
+以下是 `std::ifstream` 类的一些常用方法和功能：
+
+1. 打开文件：可以使用 `open()` 方法打开文件，指定要读取的文件路径和打开模式。打开模式可以是 `std::ios::in`（默认）或其他可选模式，如 `std::ios::binary`、`std::ios::ate` 等。
+
+2. 关闭文件：使用 `close()` 方法关闭打开的文件。在读取完文件内容后，应该显式地关闭文件。
+
+3. 读取数据：使用 `>>` 运算符可以将文件中的数据读取到不同类型的变量中。例如，可以使用 `>>` 运算符读取整数、浮点数、字符串等数据。
+
+4. 检查文件状态：可以使用 `good()`、`eof()`、`fail()`、`bad()` 等方法检查文件的状态。例如，`good()` 方法用于检查文件是否处于可读取状态，`eof()` 方法用于检查是否已到达文件末尾，`fail()` 方法用于检查读取操作是否失败。
+
+5. 定位文件指针：可以使用 `seekg()` 方法定位文件指针到指定位置，从而实现随机读取文件内容。
+
+6. 获取文件大小：可以结合文件指针定位和 `tellg()` 方法获取文件的大小。
+
+7. 检查文件是否打开：使用 `is_open()` 方法可以检查文件是否成功打开。
+
+8. 逐行读取文件：可以使用 `getline()` 方法逐行读取文件内容。
+
+使用 `std::ifstream` 类可以方便地打开、读取和处理文件内容。在使用完毕后，应该关闭文件以释放资源。
+
 ## `std::ofstream`
+
+`std::ofstream` 是 C++ 标准库中用于文件输出的类，用于将数据写入文件中。它是基于流的输出操作符 `<<` 实现的，可以通过打开文件并使用 `<<` 运算符将数据写入文件。
+
+以下是 `std::ofstream` 类的一些常用方法和功能：
+
+1. 打开文件：可以使用 `open()` 方法打开文件，指定要写入的文件路径和打开模式。打开模式可以是 `std::ios::out`（默认）或其他可选模式，如 `std::ios::binary`、`std::ios::app` 等。
+
+2. 关闭文件：使用 `close()` 方法关闭打开的文件。在写入完文件内容后，应该显式地关闭文件。
+
+3. 写入数据：使用 `<<` 运算符可以将数据写入文件。例如，可以使用 `<<` 运算符将整数、浮点数、字符串等数据写入文件。
+
+4. 检查文件状态：可以使用 `good()`、`fail()`、`bad()` 方法检查文件的状态。例如，`good()` 方法用于检查文件是否处于可写入状态，`fail()` 方法用于检查写入操作是否失败。
+
+5. 定位文件指针：可以使用 `seekp()` 方法定位文件指针到指定位置，从而实现随机写入文件内容。
+
+6. 检查文件是否打开：使用 `is_open()` 方法可以检查文件是否成功打开。
+
+---
+
+使用 `std::ofstream` 类可以方便地打开文件并将数据写入文件。在使用完毕后，应该关闭文件以释放资源。
 
 + `std::ofstream`是C++标准库提供的一个输出文件流类，用于将数据写入到文件中。它是`std::ostream`的派生类，继承了`std::ostream`中的输出操作符`<<`，可以方便地向文件写入各种类型的数据。
 
